fix spacing around left and right content

--- a/src/app/pages/home/l-side-content/l-side-content.component.scss
+++ b/src/app/pages/home/l-side-content/l-side-content.component.scss
@@ -1,5 +1,8 @@
 :host {
+  height: 100%;
+  display: flex;
   .banner {
+    width: 100%;
     @media screen and (max-width: 800px) {
       position: relative;
       top: unset;
